crates/compiler/cypress/tests/snapshots/test_parse__comment_inside_empty_list_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "[#comment\n]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([])

[=== formatted below ===]

