crates/compiler/cypress/tests/snapshots/test_parse__complex_binop_plus.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: abc + def ghi
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpPlus=>OpPlus@1
            (* Ident=>LowerIdent@2 InlineApply=>LowerIdent@2 Ident=>LowerIdent@3 EndApply)
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("abc"), Plus, Apply(Ident("def"), [Ident("ghi")]))

[=== formatted below ===]

