crates/compiler/cypress/tests/snapshots/test_parse__control_characters_in_scalar_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "''\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("''")

[=== formatted below ===]

